<resources>
    <string name="app_name">Seguros Android</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="dni">DNI</string>
    <string name="contrasena">Contraseña</string>
    <string name="accion_iniciar_sesion">Iniciar sesión</string>
    <string name="accion_borrar">Borrar</string>
    <string name="seccion_crear_tipos">Crear tipo de seguros</string>
    <string name="accion_anadir">Añadir seguro</string>
    <string name="administracion">Administración</string>
    <string name="accion_crear_usuario">Crear usuario</string>
    <string name="accion_ver_usuario">Ver usuario</string>
    <string name="accion_alternar_vendedor">Hacer vendedor</string>
    <string name="seccion_crear_usuarios">Crear usuarios</string>
    <string name="seccion_gestionar_tipos">Gestionar tipos de seguros</string>
    <string name="seccion_gestionar_usuarios">Gestionar usuarios</string>
    <string name="nombre_tipo_seguro">Nombre de tipo de seguro</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="crear_seguro">Crear seguro</string>

    <!--Strings cliente-->
    <string name="titulo_cliente">Cliente</string>
    <string name="subtitulo_seguros_contratados">Seguros contratados</string>
    <string name="accion_ver_seguro">Ver seguro</string>

    <!--Strings crear seguro usuario-->
    <string name="campo_cliente">Cliente</string>
    <string name="campo_vendedor">Vendedor</string>
    <string name="campo_tipo_seguro">Tipo seguro</string>
    <string name="accion_guardar_cambios">Guardar cambios</string>
    <string name="accion_volver_atras">Volver atrás</string>
    <string name="titulo_vendedor">Vendedor</string>
    <string name="subtitulo_crear_usuarios">Crear usuarios</string>
    <string name="accion_ver_tus_datos">Ver tus datos</string>
    <string name="titulo_datos_de_usuario">Datos de usuario</string>
    <string name="campo_dni">DNI</string>
    <string name="campo_nombre">Nombre</string>
    <string name="campo_apellidos">Apellidos</string>
    <string name="campo_direccion">Direccion</string>
    <string name="campo_telefono">Telefono</string>
    <string name="campo_contrasena">Contraseña</string>
    <string name="campo_tipo_de_usuario">Tipo de Usuario</string>
    <string name="accion_dar_de_baja">Dar de baja</string>
    <string name="accion_volver_atr_s">Volver atrás</string>
    <string name="campo_fecha_de_alta">Fecha de alta</string>
    <string name="campo_numero_de_poliza">Numero de poliza</string>
    <string name="campo_tipo">Tipo</string>
    <string name="titulo_informaci_n_de_seguro">Información de Seguro</string>
    <string name="campo_necesario">Campo necesario</string>
</resources>
