<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.ActividadAdmin"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="11dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/administracion_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/administracion"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/administracion_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/administracion_1"
            android:layout_width="373dp"
            android:layout_height="20dp"
            android:text="@string/seccion_crear_usuarios"
            app:layout_constraintBottom_toTopOf="@+id/administracion_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/administracion_0" />

        <EditText
            android:id="@+id/administracion_2"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/dni"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/administracion_4"
            app:layout_constraintEnd_toStartOf="@+id/administracion_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/administracion_1" />

        <Button
            android:id="@+id/administracion_3"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/accion_crear_usuario"
            app:layout_constraintBottom_toTopOf="@+id/administracion_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/administracion_2"
            app:layout_constraintTop_toBottomOf="@+id/administracion_1" />

        <TextView
            android:id="@+id/administracion_4"
            android:layout_width="373dp"
            android:layout_height="20dp"
            android:text="@string/seccion_gestionar_usuarios"
            app:layout_constraintBottom_toTopOf="@+id/administracion_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/administracion_3" />

        <Spinner
            android:id="@+id/administracion_5"
            android:layout_width="230dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toTopOf="@+id/administracion_8"
            app:layout_constraintEnd_toStartOf="@+id/administracion_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/administracion_4" />

        <Button
            android:id="@+id/administracion_6"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/accion_borrar"
            app:layout_constraintBottom_toTopOf="@+id/administracion_9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/administracion_5"
            app:layout_constraintTop_toBottomOf="@+id/administracion_4" />

        <Button
            android:id="@+id/administracion_7"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/accion_alternar_vendedor"
            app:layout_constraintBottom_toTopOf="@+id/administracion_10"
            app:layout_constraintEnd_toStartOf="@+id/administracion_8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/administracion_5" />

        <Button
            android:id="@+id/administracion_8"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/accion_ver_usuario"
            app:layout_constraintBottom_toTopOf="@+id/administracion_10"
            app:layout_constraintEnd_toStartOf="@+id/administracion_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/administracion_7"
            app:layout_constraintTop_toBottomOf="@+id/administracion_5" />

        <Button
            android:id="@+id/administracion_9"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/crear_seguro"
            app:layout_constraintBottom_toTopOf="@+id/administracion_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/administracion_8"
            app:layout_constraintTop_toBottomOf="@+id/administracion_6" />

        <TextView
            android:id="@+id/administracion_10"
            android:layout_width="373dp"
            android:layout_height="20dp"
            android:text="@string/seccion_crear_tipos"
            app:layout_constraintBottom_toTopOf="@+id/administracion_11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/administracion_8" />

        <EditText
            android:id="@+id/administracion_11"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/nombre_tipo_seguro"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/administracion_13"
            app:layout_constraintEnd_toStartOf="@+id/administracion_12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/administracion_10" />

        <Button
            android:id="@+id/administracion_12"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/accion_anadir"
            app:layout_constraintBottom_toTopOf="@+id/administracion_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/administracion_11"
            app:layout_constraintTop_toBottomOf="@+id/administracion_10" />

        <TextView
            android:id="@+id/administracion_13"
            android:layout_width="373dp"
            android:layout_height="20dp"
            android:text="@string/seccion_gestionar_tipos"
            app:layout_constraintBottom_toTopOf="@+id/administracion_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/administracion_11" />

        <Spinner
            android:id="@+id/administracion_14"
            android:layout_width="230dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/administracion_15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/administracion_13" />

        <Button
            android:id="@+id/administracion_15"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/accion_borrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/administracion_14"
            app:layout_constraintTop_toBottomOf="@+id/administracion_13" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>