<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.ActividadCliente"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="11dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/cliente_0"
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/titulo_cliente"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/cliente_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cliente_1"
        android:layout_width="386dp"
        android:layout_height="24dp"
        android:layout_marginBottom="20dp"
        android:text="@string/subtitulo_seguros_contratados"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <Spinner
        android:id="@+id/cliente_2"
        android:layout_width="199dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <Button
        android:id="@+id/cliente_3"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:text="@string/accion_ver_seguro"
        app:layout_constraintBottom_toTopOf="@+id/cliente_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toEndOf="@+id/cliente_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <Button
        android:id="@+id/cliente_4"
        android:layout_width="151dp"
        android:layout_height="53dp"
        android:text="@string/accion_ver_tus_datos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>