<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.ActividadCrearSeguroUsuario">

    <TextView
        android:id="@+id/crear_seguro_0"
        android:layout_width="392dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/crear_seguro"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/crear_seguro_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crear_seguro_1"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:text="@string/campo_cliente"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/crear_seguro_3"
        app:layout_constraintEnd_toStartOf="@+id/crear_seguro_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_seguro_0" />

    <EditText
        android:id="@+id/crear_seguro_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/crear_seguro_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/crear_seguro_1"
        app:layout_constraintTop_toBottomOf="@+id/crear_seguro_0" />

    <TextView
        android:id="@+id/crear_seguro_3"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:text="@string/campo_vendedor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/crear_seguro_5"
        app:layout_constraintEnd_toStartOf="@+id/crear_seguro_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_seguro_1" />

    <Spinner
        android:id="@+id/crear_seguro_4"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/crear_seguro_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/crear_seguro_3"
        app:layout_constraintTop_toBottomOf="@+id/crear_seguro_2" />

    <TextView
        android:id="@+id/crear_seguro_5"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:text="@string/campo_tipo_seguro"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/crear_seguro_7"
        app:layout_constraintEnd_toStartOf="@+id/crear_seguro_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_seguro_3" />

    <Spinner
        android:id="@+id/crear_seguro_6"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/crear_seguro_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/crear_seguro_5"
        app:layout_constraintTop_toBottomOf="@+id/crear_seguro_4" />

    <Button
        android:id="@+id/crear_seguro_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/accion_guardar_cambios"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/crear_seguro_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_seguro_5" />

    <Button
        android:id="@+id/crear_seguro_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/accion_volver_atras"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/crear_seguro_7"
        app:layout_constraintTop_toBottomOf="@+id/crear_seguro_6" />

</androidx.constraintlayout.widget.ConstraintLayout>