<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.ActividadLogin">
    <TextView
        android:id="@+id/iniciar_sesion_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/iniciar_sesion"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/iniciar_sesion_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/iniciar_sesion_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/iniciar_sesion_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciar_sesion_2"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/iniciar_sesion_1"
        android:layout_width="213dp"
        android:layout_height="22dp"
        android:text="@string/dni"
        app:layout_constraintBottom_toTopOf="@+id/iniciar_sesion_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/iniciar_sesion_3"
        android:layout_width="212dp"
        android:layout_height="25dp"
        android:text="@string/contrasena"
        app:layout_constraintBottom_toTopOf="@+id/iniciar_sesion_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/iniciar_sesion_5"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/accion_iniciar_sesion"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciar_sesion_4" />
</androidx.constraintlayout.widget.ConstraintLayout>